[package]
name = "swek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full"] }
semver = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
clap = { version = "3.2.8", features = ["derive"] }
tokio = {version="1.17", features= ["full"]}
colored = "2"
[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
