[package]
name = "swek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full"] }
semver = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
clap = { version = "3.2.8", features = ["derive"] }
tokio = {version="1.17", features= ["full"]}
colored = "2"
ascii_table = "4.0.2"
json = "0.12.4"
solang-parser = "0.1.18"
ethers = { path = "/Users/ethnical/Sec/Rust/Swek3-Dev/ethers-rs", default-features = false, features = ["solc-full"]}

#ethers-solc = { path = "/Users/ethnical/Sec/Rust/oz_implementations/ethers-rs/ethers-solc/"}
[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
