[package]
name = "swek"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Ethnical/Swek3"
keywords = ["ethereum", "web3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full"] }
semver = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
clap = { version = "3.2.8", features = ["derive"] }
tokio = {version="1.17", features= ["full"]}
colored = "2"
ascii_table = {version= "4.0.2",features=["color_codes"]}
json = "0.12.4"
solang-parser = "0.1.18"

ethers = { path = "ethers-rs", default-features = false, features = ["solc-full"]}
walkdir = "2.3.2"
crossterm = "0.25.0"
terminal-menu = "2.0.5"
zip-extract = "0.1.1"
reqwest = "0.11.13"
secp256k1 = "0.26.0"
hex = "0.4.3"
sha3 = "0.10.6"
#ethers-solc = { path = "/Users/ethnical/Sec/Rust/oz_implementations/ethers-rs/ethers-solc/"}
[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
